= SeqAn Changelog =

Add a new list item '''AT THE TOP''' for each change (excluding trivial things like changes to whitespace and comments).
Link to changsets with `[CHANGESET-NUMBER]` and tickets with `#TICKET-NUMBER` whenever possible.
You can use Trac wiki syntax.

== Trunk ==

 * Removing unused, undocumented `SinglePool2` and `ChunkPool2` allocators.
 * Cleaning up allocator headers.
 * Cleaned up iterator infrastructure a bit.
 * Cleaned up various headers in basic module, added documentation for `ProfileType` class.
 * Cleanup of ''basic_proxy.h'' header, making `Proxy` a `class` instead of a `struct`.
 * Removing empty ''basic_operator.h''.
 * Removing `VoidHolder<>`, in ''basic_holder_dynamic.h''.
 * Documentation and cleanup of `LogValue<>`.
 * Documentation for `VolatilePtr<>`.
 * Removing ''basic_counted_ptr.h'' that contained only unused code.
 * Did some renaming of debugging/testing assertion macros.
  * `SEQAN_ASSERT_TRUE` is now called `SEQAN_ASSERT` (`SEQAN_ASSERT_TRUE_MSG` is now `SEQAN_ASSERT_MSG`).
  * The old `SEQAN_ASSERT` macro from old testing/debugging system has been removed, along with the `SEQAN_CHECK*`, `SEQAN_REPORT`, `SEQAN_DO*` macros.
  * The only remaining part from the old test system are the internal functions `_compareBinaryFiles()`, `_compareTextFilesReadChar()`, `_compareTextFiles()`.
  * The assertion macros have been replaced in the library and SeqAn applications.
 * Adding functions `isBitSet()`, `clearBit()`, `clearAllBits()`, `setBitTo()`, `setBit()` to misc header ''misc_bit_twiddling.h''.
 * Adding Union-Find data structure in `misc/misc_union_find.d`.
 * fixing `eraseBack()` with block strings.
 * Using Union-Find data structure in Kruskal's algorithm to improve the running time to `O(m log m)`.